# STM8S105K4

./: CMakeLists.txt  README.md
doc/: lxyrc.md  passthru.md
src/: common.h  hse.c  lxyrc.c  passthru.c  serial.c  serial.h
